# hcw-pyproj

./: .gitignore  README.md  pyproject.toml
docs/: 2.2.2 Project Perspective.md  README.md
docs/2.2.2.1 Proj-00/: 2.2.2.1.1 Proj-00.md  2.2.2.1.2 Notes.md  2.2.2.1.3 Troubleshooting.md
docs/2.2.2.2 Proj-01/: 2.2.2.2.1 Proj-01.md  2.2.2.2.2 Do it yourself.ipynb  2.2.2.2.2 Do it yourself.md  2.2.2.2.3 Notes.md  2.2.2.2.4 Grammar Playground.ipynb  2.2.2.2.4 Grammar Playground.md
docs/2.2.2.3 Proj-02/: 2.2.2.3.1 Proj-02.md  2.2.2.3.2 Do it yourself.ipynb  2.2.2.3.2 Do it yourself.md  2.2.2.3.3 Notes.md  2.2.2.3.5 Decorator Playground.ipynb  2.2.2.3.5 Decorator Playground.md
docs/2.2.2.4 Proj-03/: 2.2.2.4.1 Proj-03.md  2.2.2.4.2 Do it yourself.ipynb  2.2.2.4.2 Do it yourself.md
docs/2.2.2.5 Proj-04/: 2.2.2.5.1 Proj-04.md
docs/2.2.2.6 Proj-05/: 2.2.2.6.1 Proj-05.md
docs/Proj-00/: 1.1 Proj-00.md  1.2 Notes.md
docs/Proj-01/: 2.1 Proj-01.md  2.2 Do it yourself.ipynb  2.3 Notes.md  2.4 Grammar Playground.ipynb
docs/Proj-02/: 3.1 Proj-02.md  3.2 Do it yourself.ipynb  3.3 Notes.md  3.4 FuncDef Playground.ipynb
docs/Proj-03/: 4.1 Proj-03.md  4.2 Do it yourself.ipynb  4.3 Notes.md
docs/Proj-04/: 5.1 Proj-04.md
src/: README.md
src/Proj-03/: README.md
src/Proj-04/: README.md
utils/: detailswrapped.md.j2  ipynb2md.py  ready4deploy.py
