[project]
name = "hcw-pyproj"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NingmengLemon", email = "guanchenxiang@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "CC-BY-NC 4.0"}


[tool.pdm]
distribution = false
