[project]
name = "lemony-python-notes"
version = "0.2.0"
description = "Lemony Python Notes"
authors = [{ name = "NingmengLemon", email = "guanchenxiang@outlook.com" }]
dependencies = [
    "lxml>=5.3.0",
    "types-lxml>=2024.9.16",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240914",
    "beautifulsoup4>=4.12.3",
    "types-beautifulsoup4>=4.12.0.20240907",
    "retry>=0.9.2",
    "types-retry>=0.9.9.4",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "mdformat>=0.7.17",
    "mdformat-footnote>=0.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }


[tool.pdm]
distribution = false
